--- a/client/src/plugins/deployment-tool/DeploymentDetailsModal.less
+++ b/client/src/plugins/deployment-tool/DeploymentDetailsModal.less
@@ -47,13 +47,13 @@
     width: 10px;
   }
 
-  label {
-    text-align: right;
+  label:only-child {
     width: 100%;
     display: inline-block;
+    text-align: right;
   }
 
-  input,
+  input:not([type="checkbox"]),
   select {
     width: 100%;
     padding: 6px;
